<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.vitaliy.taskmanager.activity.TaskSetting">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView_taskCreate"
            style="@style/textViewLarge_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_taskCreate"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView_description_taskCreate"
            style="@style/textViewMedium_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_taskCreate"
            android:text="@string/textView_description_taskCreate"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:id="@+id/imageButton_taskCreate"
            style="@style/imageButton_setting"
            android:layout_alignTop="@+id/textView_taskCreate"
            android:background="@drawable/task_create_color"
            android:contentDescription="@string/IB_task_create_description"
            android:elevation="2dp"
            tools:targetApi="lollipop" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView_taskBegin"
            style="@style/textViewLarge_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_taskBegin"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView_description_taskBegin"
            style="@style/textViewMedium_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_taskBegin"
            android:text="@string/textView_description_taskBegin"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:id="@+id/imageButton_taskBegin"
            style="@style/imageButton_setting"
            android:layout_alignTop="@+id/textView_taskBegin"
            android:background="@drawable/task_begin_color"
            android:contentDescription="@string/IB_task_begin_description"
            android:elevation="2dp"
            tools:targetApi="lollipop" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView_taskFinish"
            style="@style/textViewLarge_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_taskFinish"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView_description_taskFinish"
            style="@style/textViewMedium_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_taskFinish"
            android:text="@string/textView_description_taskFinish"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:id="@+id/imageButton_taskFinish"
            style="@style/imageButton_setting"
            android:layout_alignTop="@+id/textView_taskFinish"
            android:background="@drawable/task_finish_color"
            android:contentDescription="@string/IB_task_finish_description"
            android:elevation="2dp"
            tools:targetApi="lollipop" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView_task_autoFinish"
            style="@style/textViewLarge_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_task_autoFinish"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView_description_task_autoFinish"
            style="@style/textViewMedium_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_task_autoFinish"
            android:text="@string/textView_description_task_autoFinish"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_autoFinish"
            style="@style/textViewLarge_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:hint="@string/hint_auto_finish"
            android:inputType="numberDecimal"
            android:maxEms="4"
            android:maxWidth="40dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/freeSpace_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10">

    </RelativeLayout>

</LinearLayout>
