<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/item_exit"
        android:orderInCategory="3"
        android:title="@string/button_exit"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_load_data"
        android:icon="@drawable/ic_file_download_white_36dp"
        android:orderInCategory="1"
        android:title="@string/item_load"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_random"
        android:icon="@drawable/ic_insert_emoticon_white_36dp"
        android:orderInCategory="2"
        android:title="@string/item_random"
        app:showAsAction="ifRoom" />
</menu>