<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vitaliy.taskmanager.activity.TaskAddActivity">

    <EditText
        android:id="@+id/editText_taskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/editText_task"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_taskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_taskName"
        android:layout_centerHorizontal="true"
        android:gravity="top"
        android:hint="@string/editText_description"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLines="3" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_taskDescription"
        android:background="@drawable/background"
        android:text="@string/button_save"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button_save"
        android:background="@drawable/background"
        android:text="@string/button_exit"
        android:textSize="20sp" />

</RelativeLayout>
